# Game-AI-Development-Toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  Game-AI-Development-Toolkit.sln  LICENSE  README.md  README_cn.md
Debug/: Game-AI-Development-Toolkit.ilk
Game-AI-Development-Toolkit/: Game-AI-Development-Toolkit.cpp  Game-AI-Development-Toolkit.vcxproj  Game-AI-Development-Toolkit.vcxproj.filters  bitboard.h  bitboard.hpp  gadtlib.cpp  gadtlib.h  gadtlib.hpp  gadtmain.cpp  gadttest.cpp  gadttest.h  gameshell.cpp  gameshell.h  mcts.h  mcts.hpp  minimax.hpp  stdafx.cpp
Release/: Game-AI-Development-Toolkit.iobj  Game-AI-Development-Toolkit.ipdb
examples/: CMakeLists.txt  gadt_unittest.cpp  gadt_unittest.h  gadtmain.cpp
examples/games/: breakthrough.cpp  breakthrough.h  connect_six.h  ewn.cpp  ewn.h  renju.cpp  renju.h  surakarta.h
samples/: gadt_unittest.cpp  gadt_unittest.h  gadtmain.cpp  gadttest.cpp  gadttest.h
samples/games/: breakthrough.cpp  breakthrough.h  ewn.cpp  ewn.h  renju.cpp  renju.h  surakarta.h
src/: CMakeLists.txt  bitboard.hpp  expectimax.hpp  gadt_algorithm.hpp  gadt_args.hpp  gadt_config.h  gadt_container.hpp  gadt_define.hpp  gadt_filesystem.cpp  gadt_filesystem.h  gadt_game.h  gadt_game.hpp  gadt_io.h  gadt_log.cpp  gadt_log.hpp  gadt_memory.hpp  gadt_stl.hpp  gadt_table.cpp  gadt_table.h  gadtlib.cpp  gadtlib.h  gadtmain.cpp  gadtstl.hpp  gadttest.cpp  gadttest.h  game_shell.cpp  game_shell.h  gameshell.cpp  gameshell.h  gshell_args.hpp  gshell_command.cpp  gshell_command.h  gshell_page.cpp  gshell_page.h  mcts.hpp  mcts_new.hpp  minimax.hpp  monte_carlo.hpp  parallel_mcts.hpp  state_graph.hpp  (+2 more)
x64/Release/: Game-AI-Development-Toolkit.iobj
