cmake_minimum_required(VERSION 3.2)
project(Paradoxes VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)
AUX_SOURCE_DIRECTORY(./games/ GAME_SRC_LIST)
ADD_EXECUTABLE(Paradoxes.sh ${SRC_LIST} ${GAME_SRC_LIST})
TARGET_LINK_LIBRARIES(Paradoxes.sh Paradoxes)
ADD_DEPENDENCIES(Paradoxes.sh Paradoxes)